--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -121,7 +121,7 @@
             message =
                 `<li class="right clearfix">
                         <span class="chat-img pull-right">
-                            <img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
+                            <img src="/members/${data.from}/profileImg" alt="My Avatar">
                         </span>
                     <div class="chat-body clearfix">
                         <div class="header">
@@ -137,7 +137,7 @@
             message =
                 `<li class="left clearfix">
                     	<span class="chat-img pull-left">
-                    		<img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
+                    		<img src="/members/${data.from}/profileImg" alt="Not My Avatar">
                     	</span>
                     <div class="chat-body clearfix">
                         <div class="header">
