--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -10,25 +10,25 @@
     <div class="row">
         <div class="col-md-15 bg-white ">
             <div class=" row border-bottom padding-sm" style="height: 40px;">
-                Member
+                채팅목록
             </div>
             <!-- member list -->
             <ul class="friend-list">
                 <th:block th:each="chatRoom : ${chatRoomList}">
-                <!--<li class="active bounceInDown">-->
+<!--                <li class="active bounceInDown">-->
                 <li>
                     <a th:href="@{/chat/chatRoom/{roomId}(roomId=${chatRoom.roomId})}" class="clearfix">
                         <div class="profile_img">
-                            <img th:if="${chatRoom.buyer.memId == session.loginMember.memId}" th:src="|/members/${chatRoom.seller.memId}/profileImg|" alt="프로필이미지(판매자)">
-                            <img th:unless="${chatRoom.buyer.memId == session.loginMember.memId}" th:src="|/members/${chatRoom.buyer.memId}/profileImg|" alt="프로필이미지(구매자)">
+                            <img th:if="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.sellerId}/profileImg|" alt="프로필이미지(판매자)">
+                            <img th:unless="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.buyerId}/profileImg|" alt="프로필이미지(구매자)">
                         </div>
                         <div class="friend-name">
-                            <strong th:if="${chatRoom.buyer.memId == session.loginMember.memId}">[[${chatRoom.seller.memId}]]</strong>
-                            <strong th:unless="${chatRoom.buyer.memId == session.loginMember.memId}">[[${chatRoom.buyer.memId}]]</strong>
+                            <strong th:if="${chatRoom.buyerId == session.loginMember.memId}">[[${chatRoom.sellerId}]]</strong>
+                            <strong th:unless="${chatRoom.buyerId == session.loginMember.memId}">[[${chatRoom.buyerId}]]</strong>
                         </div>
-                        <div class="last-message text-muted">Hello, Are you there?</div>
-                        <small class="time text-muted">Just now</small>
-                        <small class="chat-alert label label-danger">1</small>
+                        <div class="last-message text-muted">[[${chatRoom.message}]]</div>
+                        <small class="time text-muted">[[${chatRoom.createdTime}]]</small>
+                        <small class="chat-alert label label-danger">[[${chatRoom.unacknowledgedMessageCount}]]</small>
                     </a>
                 </li>
                 </th:block>
@@ -39,4 +39,28 @@
 
 <script layout:fragment="script" th:inline="javascript">
     console.log("script.....................");
+    function connect3() {
+        //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
+        var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
+        //do Handshake
+        stompClient3 = Stomp.over(socket);
+
+        // connect(header,연결 성공시 콜백,에러발생시 콜백)
+        stompClient3.connect({}, function () {
+                //subscribe(subscribe url,해당 url로 메시지를 받을때마다 실행할 함수)
+                //게시글번호/판매자/구매자
+                sub = stompClient3.subscribe('/topic/chatRoomList/' + [[${session.loginMember}]]["memId"], function (e) {
+                    //e.body에 전송된 data가 들어있다
+                    // showMessage3(JSON.parse(e.body));
+                    console.log(e.body);
+                });
+            },
+            function (e) {
+                //에러 콜백
+                alert('에러발생!!!!!!');
+            }
+        );
+    }
+
+    connect3();
 </script>
