--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -63,7 +63,7 @@
                     // connect(header,연결 성공시 콜백,에러발생시 콜백)
                     stompClient.connect({}, function () {
                             //subscribe(subscribe url,해당 url로 메시지를 받을때마다 실행할 함수)
-                            sub = stompClient.subscribe('/topic/chat/'+[[${session.loginMember}]]["memId"], function (e) {
+                            sub = stompClient.subscribe('/topic/chatNoti/'+[[${session.loginMember}]]["memId"], function (e) {
                                 //e.body에 전송된 data가 들어있다
                                 console.log("알림메세지를 수신하였습니다.");
                                 $('#chat').text(Number($('#chat').text())+1);
