review 기능 추가중

--- a/src/main/resources/templates/member/buyList.html
+++ b/src/main/resources/templates/member/buyList.html
@@ -27,7 +27,9 @@
         <div th:each="buyOne : ${buyList}">
             <span th:text="|제목:${buyOne.postDto.title}, |"> </span>
             <span th:text="|판매자:${buyOne.postDto.member.memId}|"> </span>
-            <button th:onclick="|location.href='@{/reviews/seller(postId=${buyOne.postDto.postId})}'|"> 리뷰남기기 </button>
+            <button th:onclick="|location.href='@{/reviews/seller(postId=${buyOne.postDto.postId})}'|"
+                    th:if=""> 리뷰남기기 </button>
+
         </div>
     </div> <!-- /form-container -->
 </div>
