--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout/basic.html}">
 
 <head layout:fragment="head">
-    <title>판매 완료!! 내역</title>
+    <title>리뷰 보기</title>
     <link th:href="@{/css/bootstrap.min.css}"
           href="/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -21,16 +21,7 @@
 
 <div layout:fragment="content">
     <div class="form-container">
-        <div class="py-5 text-center">
-            <h2>판매 완료!! 내역</h2>
-        </div>
-        <div th:each="sellOne : ${sellList}">
-            <span th:text="|제목:${sellOne.postDto.title}, |"> </span>
-            <span th:text="|판매상태:${sellOne.postDto.sellState}|"> </span>
-            <span th:text="|구매자:${sellOne.buyerId}|"> </span>
-            <button th:onclick="|location.href='@{/reviews/buyer(postId=${sellOne.postDto.postId})}'|">리뷰 남기기 </button>
-        </div>
-    </div> <!-- /form-container -->
+    </div>
 </div>
 
 <div layout:fragment="script" th:inline="javascript">
