--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -66,7 +66,8 @@
                                 <div class="text-center">
                                     <!-- 제목-->
                                     <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
-                                    <p class="fw">지역 / 1시간 전</p>
+                                    <!--지역, 시간-->
+                                    <p class="fw">[[${post.loc.locName}]] / 1시간 전</p>
                                     <!-- 가격-->
                                     <h6 class="fw-bolder" th:text="|${post.price}원|">가격</h6>
                                 </div>
