--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -14,7 +14,7 @@
         <link href="/css/styles.css" rel="stylesheet" />
         <link href="/css/profile.css" rel="stylesheet" />
 
-        <!--detail페이지 박스슬라이더-->
+        <!--사진 박스슬라이더-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -76,6 +76,10 @@
                              <img th:src="|/members/${post.member.memId}/profileImg|" alt="프로필이미지"/>
                             </a>
                         </div>
+
+                        <!--게시글 메뉴바: 삭제,숨김,수정-->
+                        <i th:if="${session.loginMember.memId}==${post.member.memId}" class="bi bi-three-dots-vertical fs-1" onclick="viewModal()"></i>
+
                         <!--카테고리-->
                         <div class="small mb-1" th:text="${post.category.getCategory()}">SKU: BST-498</div>
                         <!--제목-->
@@ -86,16 +90,13 @@
                         </div>
                         <p class="lead" th:utext="${post.content}">상품설명</p>
                         <div class="d-flex">
-                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
                                 Add to cart
                             </button>
                             <button class="btn btn-outline-dark flex-shrink-0" type="button" th:onclick="|location.href='@{/chat/post/{postId}(postId=${postId})}'|">채팅하기</button>
                         </div>
-                        <a th:href="|/post/remove/${post.postId}|"> 게시글삭제</a><br/>
-                        <a href="#"> 게시글숨김</a><br/>
-                        <a th:href="|/post/updatePost/${post.postId}|"> 게시글수정</a><br/>
+
 
                         <!--임시 판매 완료 버튼(for 리뷰)-->
                         <form action="/review/">
@@ -104,8 +105,47 @@
                     </div>
                 </div>
             </div>
-
         </section>
+
+
+        <!--모달-->
+        <div class="modal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">게시글 관리</h5>
+                        <button type="button" class="btn-close"
+                                data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <!--수정-->
+                        <div>
+                            <a th:href="|/post/updatePost/${post.postId}|"> 게시글수정</a>
+                        </div>
+
+                        <!--숨김-->
+                        <div th:onclick="hideState([[${post.postId}]], [[${post.hideState.getHideStateName()}]])">
+                            <a th:if="${post.hideState.getHideStateName()} == '보임'" > 게시글 숨기기</a>
+                            <a th:if="${post.hideState.getHideStateName()} == '숨김'" > 게시글 보이기</a>
+                        </div>
+                        <!--삭제-->
+                        <div th:onclick="deletePost([[${post.postId}]])">
+                            <a > 게시글삭제</a>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn-secondary"
+                                data-bs-dismiss="modal">Close</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
         <!-- Related items section-->
         <section class="py-5 bg-light">
             <div class="container px-4 px-lg-5 mt-5">
@@ -220,5 +260,64 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/js/scripts.js"></script>
+
+        <script>
+
+            //게시물 숨기기/보이기
+            function hideState(postId, hideStateName){
+                console.log("postId:",postId,"hideState:",hideStateName);
+
+                let data = {"postId" : postId, "hideStateName": hideStateName};
+
+                $.ajax({
+                    url: '/post/hideState',
+                    type: 'POST',
+                    data: data,
+                    success: function(result){
+                        console.log(result);
+                        //화면 처리
+                        alert(result);
+                        location.reload();
+                    },
+                    error: function(jqXHR, textStatus, errorThrown){
+                        console.log(jqXHR.responseText);
+                        alert(textStatus);
+                    }
+                }); //$.ajax
+            }
+
+            //게시글 삭제
+            function deletePost(postId){
+                let data = {"postId": postId}
+                let trueFalse = confirm("게시글을 삭제하시겠습니까?");
+                if(trueFalse == true){
+                    $.ajax({
+                        url: '/post/remove',
+                        type: 'POST',
+                        data: data,
+                        success: function(result){
+                            console.log(result);
+                            //화면 처리
+                            alert(result);
+                            // location.href='/post/board';
+                            location.href = document.referrer;
+                        },
+                        error: function(jqXHR, textStatus, errorThrown){
+                            console.log(jqXHR.responseText);
+                            alert("게시글 삭제에 실패했습니다.");
+                        }
+                    }); //$.ajax
+                }
+
+
+            }
+
+            //모달창 띄우기
+            function viewModal() {
+                const modal = new bootstrap.Modal(document.querySelector(".modal"));
+                modal.show();
+            }
+        </script>
+
     </body>
 </html>
