--- a/src/main/resources/templates/update_post.html
+++ b/src/main/resources/templates/update_post.html
@@ -31,12 +31,14 @@
                         <input type="file" multiple="multiple" name="uploadFiles" id='inputImage' accept="image/*">
                     </div>
                     <!--이미지 미리보기-->
-                    <ul id="Preview" class="sortable" >
+                    <ul id="prePreview" class="sortable" >
                         <li class="ui-state-default" th:each="img:${postImgs}" >
                             <img th:src="|/post/img/${img.imgId}|" width=80 height=80>
-                            <span th:id="${img.imgId}" class="delBtn" onclick="delImg(this)">x</span>
+                            <span th:id="${img.imgId}" class="delBtn" onclick="delPreImg(this)">x</span>
                         </li>
                     </ul>
+                    <ul id="Preview" class="sortable"></ul>
+
                 </div>
 
                 <div class="uploadResult"></div>
@@ -64,8 +66,11 @@
             <div class="form-group form-car-mileage">
                 <input type="text" class="form-control" id="carMileage" name="wishPlace" th:value="${post.wishPlace}">
             </div>
+            <!--숨김여부, 판매여부 hidden-->
             <input type="hidden" name="hideState" th:value="${post.hideState}" />
-<!--            <div class="form-group form-car-smoking">-->
+            <input type="hidden" name="sellState" th:value="${post.sellState}" />
+
+            <!--            <div class="form-group form-car-smoking">-->
 <!--                <label>차량 판매자 흡연 여부</label>-->
 <!--                <div class="form-check form-check-inline form-check-smoking">-->
 <!--                    <input class="form-check-input" type="radio" name="smokingOptions" id="inlineSmoker" value="true">-->
@@ -102,12 +107,85 @@
         var imgIdList = new Array();
 
         //미리보기 이미지 삭제
-        function delImg(e){
+        function delPreImg(e){
             console.log("e.id(이미지아이디)"+e.id);
             $(e).parent('li').remove();
             imgIdList.push(JSON.parse(e.id));
             console.log("imgIdList:"+imgIdList);
         }
+
+        //새로운 이미지 추가
+        //드래그 앤 드롭
+        // $(".sortable").sortable();
+
+        //이미지 등록
+        $("#inputImage").change(function(e){
+            //div 내용 비워주기
+            $('#Preview').empty();
+
+            // const fileInput = document.querySelector('#inputImage');
+            var files = e.target.files; //선택한 파일을 가져옴.
+            var arr = Array.from(files);
+
+            // var arr = Array.prototype.slice.call(files);
+            //Array 객체의 slice() 메서드를 사용하여 객체(files)를 배열(arr)로 변환.
+            //call() 메소드를 사용하여 slice() 메소드를 호출하면, 인수로 전달된 객체가 slice() 메소드의 this 값이 됨.
+
+            //업로드 가능 파일인지 체크
+            for(var i=0; i<files.length; i++){
+                if(!checkExtension(files[i].name,files[i].size)){
+                    return false;
+                }
+            }
+            preview(arr);
+
+            function checkExtension(fileName,fileSize){
+                // var regex = new RegExp("(.*?)\.(exe|sh|zip|alz)$");
+                var maxSize = 20971520;  //20MB
+
+                if(fileSize >= maxSize){
+                    alert('이미지 크기가 초과되었습니다.');
+                    $("#inputImage").val("");  //파일 초기화
+                    return false;
+                }
+
+                // if(regex.test(fileName)){
+                //     alert('확장자명을 확인해주세요.');
+                //     $("#inputImage").val("");  //파일 초기화
+                //     return false;
+                // }
+                return true;
+            }
+
+            function preview(arr){
+                arr.forEach(function(f){
+
+                    //이미지 파일 미리보기
+                    if(f.type.match('image.*')){
+                        //파일을 읽기 위한 FileReader객체 생성
+                        var reader = new FileReader();
+                        reader.onload = function (e) {
+                            //파일 읽어들이기를 성공했을때 호출되는 이벤트 핸들러
+                            //div에 이미지 추가
+                            var str = `<li class="ui-state-default">
+                                           <img id="${f.lastModified}" src="${e.target.result}" title="${f.name}" width=80 height=80>
+                                           <span data-index="${f.lastModified}" class="delBtn" onclick="delImg(this)">x</span>
+                                           </li>`
+                            $(str).appendTo('#Preview');
+
+                        }
+                        reader.readAsDataURL(f); //reader에게 e.target.files[0](업로드된 파일)를 URL로 읽으라고 명령
+
+                    }else{
+                        //이미지 파일 아닐 경우
+                        alert('이미지가 아닌 파일은 업로드할 수 없습니다.');
+
+                    }
+                })
+            }
+        })
+
+
 
         //게시글 업로드
         $('#uploadBtn').click(function( ) {
@@ -139,7 +217,7 @@
                 },
                 error: function(jqXHR, textStatus, errorThrown){
                     console.log(jqXHR.responseText);
-                    alert(textStatus);
+                    alert(jqXHR.responseText);
                 }
 
             }); //$.ajax
