--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -13,34 +13,6 @@
         <div class="col-md-15 bg-white ">
             <div class="chat-message">
                 <ul id="chatting" class="chat">
-                    <li class="left clearfix">
-                        <span class="chat-img pull-left">
-                    		<img src="https://bootdey.com/img/Content/user_3.jpg" alt="User Avatar">
-                    	</span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">John Doe</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 12 mins ago</small>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                        </div>
-                    </li>
-                    <li class="right clearfix">
-                        <span class="chat-img pull-right">
-                    		<img src="https://bootdey.com/img/Content/user_1.jpg" alt="User Avatar">
-                    	</span>
-                        <div class="chat-body clearfix">
-                            <div class="header">
-                                <strong class="primary-font">Sarah</strong>
-                                <small class="pull-right text-muted"><i class="fa fa-clock-o"></i> 13 mins ago</small>
-                            </div>
-                            <p>
-                                왜 안되는거지..??
-                            </p>
-                        </div>
-                    </li>
                     <th:block th:each="chat : ${chatList}">
                         <li th:if="${session.loginMember.memId}==${chat.from.memId}" class="right clearfix">
                             <span class="chat-img pull-right">
@@ -90,7 +62,7 @@
 
     function connect2() {
         //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
-        var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
+        var socket = new SockJS("http://172.30.1.6:8888/gs-guide-websocket");
         //do Handshake
         stompClient2 = Stomp.over(socket);
 
