--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -15,8 +15,7 @@
             <!-- member list -->
             <ul class="friend-list">
                 <th:block th:each="chatRoom : ${chatRoomList}">
-<!--                <li class="active bounceInDown">-->
-                <li>
+                <li th:id="'roomId'+${chatRoom.roomId}">
                     <a th:href="@{/chat/chatRoom/{roomId}(roomId=${chatRoom.roomId})}" class="clearfix">
                         <div class="profile_img">
                             <img th:if="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.sellerId}/profileImg|" alt="프로필이미지(판매자)">
@@ -41,7 +40,7 @@
     console.log("script.....................");
     function connect3() {
         //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
-        var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
+        var socket = new SockJS("http://172.30.1.6:8888/gs-guide-websocket");
         //do Handshake
         stompClient3 = Stomp.over(socket);
 
@@ -51,8 +50,7 @@
                 //게시글번호/판매자/구매자
                 sub = stompClient3.subscribe('/topic/chatRoomList/' + [[${session.loginMember}]]["memId"], function (e) {
                     //e.body에 전송된 data가 들어있다
-                    // showMessage3(JSON.parse(e.body));
-                    console.log(e.body);
+                    showMessage3(e.body);
                 });
             },
             function (e) {
@@ -63,4 +61,42 @@
     }
 
     connect3();
+
+    function showMessage3(roomId) {
+        $.ajax({
+            url:"/chat/getChatRoom/"+roomId,
+            type:"post",
+            success: function (result) {
+                let loginId = [[${session.loginMember.memId}]];
+                let fromId = "";
+                if (result.buyerId == loginId) {
+                    fromId = result.sellerId;
+                } else {
+                    fromId = result.buyerId
+                }
+                let newChatRoomHtml = `<li id="roomId${result.roomId}">
+                    <a href="/chat/chatRoom/${result.roomId}" class="clearfix">
+                        <div class="profile_img">
+                            <img src="/members/${fromId}/profileImg" alt="프로필이미지">
+                        </div>
+                        <div class="friend-name">
+                            <strong>${fromId}</strong>
+                        </div>
+                        <div class="last-message text-muted">${result.message}</div>
+                        <small class="time text-muted">${result.createdTime}</small>
+                        <small class="chat-alert label label-danger">${result.unacknowledgedMessageCount}</small>
+                    </a>
+                </li>`;
+                let find = $("#roomId"+roomId).html();
+                if (find != undefined) {
+                    //     changeHtml = "수정될것입니다~~!!!";
+                    //     $("#roomId"+roomId).html(result);
+                    let newChatRoom = $("#roomId" + roomId).html(newChatRoomHtml);
+                    $(newChatRoom).prependTo(".friend-list");
+                } else {
+                    $(newChatRoomHtml).prependTo(".friend-list");
+                }
+            },
+        });
+    }
 </script>
