채팅방 업데이트
채팅방 업데이트

--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -40,7 +40,7 @@
     console.log("script.....................");
     function connect3() {
         //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
-        var socket = new SockJS("http://172.30.1.6:8888/gs-guide-websocket");
+        var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
         //do Handshake
         stompClient3 = Stomp.over(socket);
 
